--- a/src/App.css
+++ b/src/App.css
@@ -13,20 +13,48 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
+ 
 .App-link {
   color: #61dafb;
 }
+
+/*  */
+.container{
+  margin-right: 10%;
+  margin-left: 10%;
+  position: relative;
+}
+.cart-wrapper{
+
+  width: 10%;
+  border: 1px solid;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  border-radius:4px;
+}
+.img-wrapper img{
+  width: 150px;
+}
+.btn-wrapper button{
+  padding: 10px;
+  background-color: red;
+  border: 0px;
+  border-radius:4px;
+  color: white;
+  box-shadow: #333 0px 1px 5px;
+  
+}
+.item{
+  padding-bottom: 5px;
+}
+.buy-wrapper img{
+  width: 50px;
+  position: absolute;
+  right: 0;
+  /* top: 0; */
+}
+/*  */
+
 
 @keyframes App-logo-spin {
   from {
